Bug 964997 - When scrolling is disabled, don't apply the velocity transformations to the displayport. r=botond, a=1.3+